--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit backupGlobals="false"
     backupStaticAttributes="false"
+    bootstrap="./vendor/autoload.php"
     colors="true"
     convertErrorsToExceptions="true"
     convertNoticesToExceptions="true"
@@ -11,12 +12,13 @@
 >
     <testsuites>
         <testsuite name="Silex demo Test Suite">
-            <directory>./Tests/</directory>
+          <directory>./src/Incognito/SilextalkCilexDemo/Tests/</directory>
         </testsuite>
     </testsuites>
-
-    <php>
-        <server name="APP_DIR" value="./" />
-        <env name="env" value="test" />
-    </php>
+    <filter>
+        <whitelist>
+            <directory suffix=".php">./src/</directory>
+            <directory suffix=".php">./app/</directory>
+        </whitelist>
+    </filter>   
 </phpunit>
