Imports base dep and wires together dependency manager. I also had to fork Silex custom, as the providers while mostly reusable were using overly specific contracts
OK (1 test, 6 assertions)

Code Coverage Report:
  2015-04-12 22:34:23

 Summary:
  Classes: 33.33% (1/3)
  Methods: 71.43% (5/7)
  Lines:   95.65% (66/69)

\Incognito\SilextalkCilexDemo::SilextalkCilexDemoServiceRegistry
  Methods:  50.00% ( 1/ 2)   Lines:  93.33% ( 14/ 15)
\Incognito\SilextalkCilexDemo\Command::ComposeCommand
  Methods:  50.00% ( 1/ 2)   Lines:  90.00% ( 18/ 20)
\Incognito\SilextalkCilexDemo\Test\Command::ComposeCommandTest
  Methods: 100.00% ( 3/ 3)   Lines: 100.00% ( 27/ 27)

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,19 @@
     "autoload": {
         "psr-4": { "Incognito\\SilextalkCilexDemo\\": "src/Incognito/SilextalkCilexDemo" }
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/Incognito/SilextalkBase"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/Incognito/silex-fork"
+        }
+    ],
     "require": {
-        "cilex/cilex": "dev-master"
+        "cilex/cilex": "dev-master",
+        "incognito/silextalk-base": "~0.1",
+        "silex/silex": "dev-providerShim as 1.2.0"
     }
 }
